objects/PC_Support_Model__c.object
<CustomObject>
    <description>*NOTE: No longer supported in Patient Connect since Spring &apos;18 release.* 
Custom object in Patient Connect that supports models which determine the tasks/activities to be provided to the patients related to a patient services program. The details about the support models are stored in this object.</description>
    <fields>
        <fullName>PC_Case_Type__c</fullName>
        <description>Associates with the type of case that the support model is associated with.</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>BI / BV</fullName>
                </value>
                <value>
                    <fullName>Alternate Funding</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Copay</fullName>
                </value>
                <value>
                    <fullName>Prior Authorization</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Access Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Generate_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if support model activities should be generated all at once.</description>
        <label>Generate All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>Determines if the support model is active or inactive for use.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Support Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Model</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>